--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=8081
 
 # Mysql connection
 spring.datasource.username = root
-spring.datasource.password = root
-spring.datasource.url = jdbc:mysql://localhost:3306/saladereuniao
+spring.datasource.password = 
+spring.datasource.url = 
 
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.format_sql=true
